Bug 402398 - Juk playlist mis-sorts Collection List, History, and Play Queue with playlist entries after KF5
Summary: Juk playlist mis-sorts Collection List, History, and Play Queue with playlist...
Status: RESOLVED FIXED
Alias: None
Product: juk
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-20 23:24 UTC by Alberto Gonzalez
Modified: 2018-12-24 23:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.1
Sentry Crash Report:


Attachments
Example of Juk mis-sorting special icon names in playlist (356.32 KB, image/png)
2018-12-20 23:24 UTC, Alberto Gonzalez
Details
Screenshot of working JuK sorting (398.00 KB, image/png)
2018-12-22 00:16 UTC, Michael Pyne
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alberto Gonzalez 2018-12-20 23:24:41 UTC
Created attachment 117036 [details]
Example of Juk mis-sorting special icon names in playlist

SUMMARY

Since the port of Juk to KF5, the playlist column has a regression with the way the "special icons" are sorted. 

The "special icons" are the "Collection List" icon, the "History" icon, and the "Play Queue" icon. These have special functions.

The special icons used to be grouped at the top of the playlist view column, above all playlists, but now they are sorted alphabetically with the rest of the playlists.

This is a problem if there are many playlists, as I have when I DJ. I used to be able to find the special icon right away, as they were right at the top, now I have to scroll and look for them, which is troublesome when I'm DJ'ing and I need to be fast, and this used to be the old functionality that brought me to Juk.

See the attached screenshot to see our case where the special icons are buried in the playlist names.

STEPS TO REPRODUCE

1. Make several mock playlists. Give each playlist a different name, like "B", "J", "Q". These names are designed so that you can see how all are sorting.

2. Look at the left hand side of the window, which is the Playlist area. You will see all the playlists and special icons sorting like this:

B
Collection List
History
J
Play Queue
Q


OBSERVED RESULT

You can see that the special icons are sorting in *in between* the playlist names.

EXPECTED RESULT

We should see the special icons *grouped together* at the top, the way it used to be before Juk was transitioned to KF5.

Operating System: KDE neon 5.14
KDE Plasma Version: 5.14.4
Qt Version: 5.11.2
KDE Frameworks Version: 5.53.0
Kernel Version: 4.15.0-43-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 7.6 GiB of RAM

Thank you for time and your efforts, very much appreciated!
Comment 1 Michael Pyne 2018-12-22 00:16:12 UTC
That's interesting, because I think it's always sorted properly for me even on KF5. I'll double-check to see if it's something I've already fixed.
Comment 2 Michael Pyne 2018-12-22 00:16:40 UTC
Created attachment 117052 [details]
Screenshot of working JuK sorting
Comment 3 Michael Pyne 2018-12-22 00:29:07 UTC
I have something I can try. I'll commit to 18.12 since it shouldn't hurt anything but if you're able to test out newer versions that would help to figure out whether the fix is effective or not.

Note I'll be leaving out of area tonight and won't be able to check on the bug until after Christmas so expect that I'll be out of touch until then.
Comment 4 Michael 2018-12-22 00:55:19 UTC
Thank you, and that's interesting that it sorts for you, but not for us. I've noticed this since the port to KF5 with Kubuntu, although this is reported under the more up-to-date Neon.

I can test with the developer unstable branch of Neon. Would that work for testing?
Comment 5 Michael Pyne 2018-12-22 03:50:40 UTC
KDE neon developer unstable should work, but it will depend on when the new nightly builds are done.

I've since confirmed the bug (it was only by accident that it was always sorting right for me) and I think I've fixed it in the meantime. So thanks for the report, but let me know if it doesn't work for you or if the fix causes other issues.
Comment 6 Michael 2018-12-23 06:33:16 UTC
Okay, very good that you were able to confirm this!
Comment 7 Michael Pyne 2018-12-24 23:07:50 UTC
For testing purposes, it looks like the juk packages for KDE neon developer unstable edition (based on bionic) have been updated with the fix. See https://build.neon.kde.org/job/bionic_unstable_kde_juk/33/

If that doesn't work for you please reopen.